chore: update notes

--- a/02_ab_testing.ipynb
+++ b/02_ab_testing.ipynb
@@ -20,7 +20,9 @@
    "source": [
     "See here https://rowannicholls.github.io/python/statistics/sample_size.html\n",
     "\n",
-    "The calculation should be similar to [2.1.2 Two × One-Sided Equality](https://rowannicholls.github.io/python/statistics/sample_size.html)"
+    "The calculation should be similar to [2.1.2 Two × One-Sided Equality](https://rowannicholls.github.io/python/statistics/sample_size.html)\n",
+    "\n",
+    "https://www.statology.org/z-test-python/"
    ]
   },
   {
@@ -853,34 +855,8 @@
     "sd_1_byse = sd_1_asdaq\n",
     "sd_1_delta = np.sqrt(sd_1_asdaq**2 + sd_1_byse**2)\n",
     "prac_sig = 1.0\n",
-    "ab_test_design_2(sd_1_delta, prac_sig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "85a701ab-dd14-4520-9b92-c6f7202b9bae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(15.51079958367986, 0.9934308808644532, -2.3263478740408408)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import statsmodels.stats.api as sm\n",
-    "from scipy import stats\n",
-    "\n",
-    "m = sm.zt_ind_solve_power(\n",
-    "    effect_size=1 / 1.12, ratio=1, power=0.8, alpha=0.05, alternative=\"larger\"\n",
-    ")\n",
-    "m, stats.norm.cdf(2.48), stats.norm.ppf(0.01)"
+    "nobs1 = ab_test_design_2(sd_1_delta, prac_sig)\n",
+    "nobs1"
    ]
   },
   {
@@ -893,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "b801fec8-50cf-4169-ae00-07af9542433d",
    "metadata": {},
    "outputs": [],
@@ -903,18 +879,20 @@
     "    ind_byse = []\n",
     "    while (\n",
     "        len(ind_asdaq) < min_individual_measurements\n",
-    "        and len(ind_byse) < min_individual_measurements\n",
+    "        or len(ind_byse) < min_individual_measurements\n",
     "    ):\n",
     "        if np.random.randint(2) == 0:\n",
-    "            ind_asdaq.append(trading_system(\"ASDAQ\"))\n",
+    "            if len(ind_asdaq) < min_individual_measurements:\n",
+    "                ind_asdaq.append(trading_system(\"ASDAQ\"))\n",
     "        else:\n",
-    "            ind_byse.append(trading_system(\"BYSE\"))\n",
+    "            if len(ind_byse) < min_individual_measurements:\n",
+    "                ind_byse.append(trading_system(\"BYSE\"))\n",
     "    return np.array(ind_asdaq), np.array(ind_byse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "51c3c433-5926-458c-8f65-d373d6b88b65",
    "metadata": {},
    "outputs": [
@@ -922,31 +900,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 3\n"
+      "16 16\n"
      ]
     }
    ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
-    "# ind_asdaq, ind_byse = measure(16)\n",
-    "ind_asdaq, ind_byse = measure(3)\n",
+    "ind_asdaq, ind_byse = measure(nobs1)\n",
     "print(len(ind_asdaq), len(ind_byse))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "8d6c9810-1cb6-4181-94c5-972c1eb09186",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.1870713644978501"
+       "-2.6262631797410325"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "14013512-3e18-4e64-8447-8e6318426608",
    "metadata": {},
    "outputs": [],
@@ -978,17 +955,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "3f227355-69a4-47ff-b3cc-f295306e2ca1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-3.0855234054503917"
+       "-7.175523933947565"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,23 +976,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "1c0079b1-7a5d-4531-b71b-b9fb0c984c7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def z_score(dist1, dist2):\n",
+    "    \"\"\"\n",
+    "    https://www.statsmodels.org/dev/_modules/statsmodels/stats/weightstats.html#ztest\n",
+    "    \"\"\"\n",
     "    assert isinstance(dist1, np.ndarray), \"dist1 is not np.ndarray\"\n",
     "    assert isinstance(dist2, np.ndarray), \"dist2 is not np.ndarray\"\n",
     "\n",
     "    mean1 = dist1.mean()\n",
-    "    std_err1 = dist1.std() / np.sqrt(len(dist1))\n",
-    "\n",
     "    mean2 = dist2.mean()\n",
-    "    std_err2 = dist2.std() / np.sqrt(len(dist2))\n",
+    "    # Why minus 1?\n",
+    "    # https://www.quora.com/Why-do-we-subtract-1-from-the-number-of-samples-for-sample-standard-deviation#:~:text=So%20why%20do%20we%20subtract,sample%20size)%20corrects%20this%20bias.\n",
+    "    # https://www.reddit.com/r/learnmath/comments/lvxik0/why_do_we_divide_by_n1_and_not_n_when_calculating/?rdt=33845\n",
+    "    std_err1 = dist1.std() / np.sqrt(len(dist1) - 1)\n",
+    "    std_err2 = dist2.std() / np.sqrt(len(dist2) - 1)\n",
+    "    std_err_delta = np.sqrt(std_err1**2 + std_err2**2)\n",
     "\n",
     "    delta = mean2 - mean1\n",
-    "    std_err_delta = np.sqrt(std_err2**2 + std_err1**2)\n",
     "\n",
     "    z = delta / std_err_delta\n",
     "    return z"
@@ -1023,17 +1005,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "84e545dc-78b3-4e04-9106-dab9eb74b78f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-3.0855234054503917"
+       "-6.947671174122912"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,17 +1042,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "46d2fec4-a91e-4815-93d2-7876095613e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.2596596554613593, 0.20779216525007327, -0.814105822690334)"
+       "(-6.947671174122912, 1.8568267113497456e-12, -6.947671174122912, True)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,9 +1061,13 @@
     "import scipy.stats as st\n",
     "from statsmodels.stats.weightstats import ztest\n",
     "\n",
-    "tstat, pvalue = ztest(ind_asdaq, ind_byse)\n",
+    "# NOTE: The position of the X values are important.\n",
+    "# X1 - X2, for smaller alternative.\n",
+    "tstat, pvalue = ztest(ind_byse, ind_asdaq, usevar=\"unequal\", alternative=\"smaller\")\n",
+    "# tstat is zscore.\n",
     "zscore = st.norm.ppf(pvalue)\n",
-    "tstat, pvalue, zscore"
+    "alpha = 0.05\n",
+    "tstat, pvalue, zscore, st.norm.sf(abs(tstat)) < alpha"
    ]
   },
   {
@@ -1094,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "bfc8925c-6331-45b5-ba3a-809e9c98f4e6",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1090,7 @@
        "(6.7971436061089205, 7.0)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "70a8f160-329b-4c97-b535-1fda673d0967",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1123,7 @@
        "(15.53245388534377, 16.0)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "b080bea5-5cd6-405d-a4cf-2e23a651d237",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1170,7 @@
        "(7.0, 7.0)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
