--- a/02_ab_testing.ipynb
+++ b/02_ab_testing.ipynb
@@ -1080,17 +1080,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "bfc8925c-6331-45b5-ba3a-809e9c98f4e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6.7971436061089205, 7.0)"
+       "(6.787667486366592, 7.0)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,8 @@
     "import statsmodels.stats.api as sm\n",
     "\n",
     "# effect_size is the difference in mean divided by the std deviation\n",
-    "es = practical_significance / sd_1_byse\n",
+    "# es = practical_significance / sd_1_byse\n",
+    "es = practical_significance / 1.12 \n",
     "n1 = sm.zt_ind_solve_power(\n",
     "    effect_size=es,\n",
     "    nobs1=None,\n",
