chore: add rsm, add normal equation

--- a/03_multi_armed_bandits.v2.ipynb
+++ b/03_multi_armed_bandits.v2.ipynb
@@ -790,6 +790,7 @@
     "        self._count = 0\n",
     "\n",
     "    def append(self, clicked):\n",
+    "        # Generates a 0 or 1 up to length n, take the zeros and update the indices.\n",
     "        i = np.where(\n",
     "            np.random.randint(\n",
     "                2,\n",
