chore: solving linear equation using np.linalg.solve

--- a/001_normal_equation.ipynb
+++ b/001_normal_equation.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "972b58df-49fe-4a97-a7aa-e99fb56993d5",
+   "metadata": {},
+   "source": [
+    "# Solving Linear Equation\n",
+    "\n",
+    "https://www.eecis.udel.edu/~boncelet/ipynb/LR_NYC_Example.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "03ae0f14-78a4-4ef3-ab42-835994a4bfab",
@@ -82,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "array([3.87953046, 3.1691552 ])"
+       "array([4.12802768, 2.72259853])"
       ]
      },
      "execution_count": 5,
@@ -106,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "19.725306447532212"
+       "17.741020326494528"
       ]
      },
      "execution_count": 6,
@@ -129,7 +139,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v5/8v9k6wcn65jbbct8spl3wwsh0000gn/T/ipykernel_9935/1142066073.py:2: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "/var/folders/v5/8v9k6wcn65jbbct8spl3wwsh0000gn/T/ipykernel_65925/1142066073.py:2: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
       "  theta, residuals, rank, s = np.linalg.lstsq(X_b, y)\n"
      ]
@@ -137,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "array([3.87953046, 3.1691552 ])"
+       "array([4.12802768, 2.72259853])"
       ]
      },
      "execution_count": 7,
@@ -154,16 +164,59 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "eb540d27-acb3-4f69-b1f9-e1a6c2c4fc04",
+   "id": "cd0b8e79-3173-4d91-a965-98b3c0bdcd02",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19.72530644753216"
+       "17.74102032649454"
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test @ theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4f1635f8-aa61-492c-8bfb-9b4976b65a44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.12802768, 2.72259853])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta = np.linalg.solve(X_b.T @ X_b, X_b.T @ y)\n",
+    "theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "95685519-9e14-40ec-ab9d-0dc0cfea2277",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.741020326494507"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,17 +235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "08c3d08f-7670-40ed-983b-a9927ed0dbff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3.87953046, 3.1691552 ])"
+       "array([4.12802768, 2.72259853])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,17 +260,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "69b7b8c7-ee0f-4b57-a7c3-b0b132cc4746",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19.725306447532166"
+       "17.741020326494535"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
