chore: update analytics

--- a/002_ab_test.ipynb
+++ b/002_ab_test.ipynb
@@ -174,6 +174,99 @@
     "two_tail = sample_size_for_proportions(p1, p2, alternative=\"two-sided\")\n",
     "one_tail, two_tail"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "10a9e513-e0ca-4f52-98a8-4fcbcb9580e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.2011498999324322, 0.2296930594566906)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 32\n",
+    "a = np.random.normal(1, sigma, n)\n",
+    "b = np.random.normal(1 + delta, sigma, n)\n",
+    "sm.ztest(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "37baac60-6c05-4d6e-b9f0-55a1ae776dca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.2011498999324322, 0.23426165878620456, 62.0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sm.ttest_ind(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "eed2091a-741b-4c87-af70-fe9a156c27ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.806441871268021, 0.0050091949361540785)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nobs1 = 388\n",
+    "nobs2 = 388\n",
+    "sm.test_proportions_2indep(\n",
+    "    p1 * nobs1, nobs1, p2 * nobs2, nobs2, return_results=False  # count1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5ac0c6f0-085d-4289-b7b7-03c2638e9a0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.799711384836629, 0.005114831546164752)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count = [p1 * nobs1, p2 * nobs2]\n",
+    "nobs = [nobs1, nobs2]\n",
+    "sm.proportions_ztest(count, nobs, alternative=\"two-sided\", prop_var=False)"
+   ]
   }
  ],
  "metadata": {
