chore: use seed to fix result

--- a/002_ab_test.ipynb
+++ b/002_ab_test.ipynb
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "(-1.2011498999324322, 0.2296930594566906)"
+       "(-2.0747507095620703, 0.03800964495628399)"
       ]
      },
      "execution_count": 6,
@@ -194,24 +194,46 @@
    ],
    "source": [
     "n = 32\n",
-    "a = np.random.normal(1, sigma, n)\n",
-    "b = np.random.normal(1 + delta, sigma, n)\n",
+    "np.random.seed(4)\n",
+    "a = np.random.normal(0, sigma, n)\n",
+    "b = np.random.normal(delta, sigma, n)\n",
     "sm.ztest(a, b)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "9e86d5e4-02a3-48fc-b610-a86620e333d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.2994744890564782, 9.506761445214066, 5.518622508533227, 10.285421704271933)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(a), np.std(a), np.mean(b), np.std(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "37baac60-6c05-4d6e-b9f0-55a1ae776dca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-1.2011498999324322, 0.23426165878620456, 62.0)"
+       "(-2.0747507095620703, 0.04216680773099718, 62.0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "eed2091a-741b-4c87-af70-fe9a156c27ee",
    "metadata": {},
    "outputs": [
@@ -232,7 +254,7 @@
        "(2.806441871268021, 0.0050091949361540785)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5ac0c6f0-085d-4289-b7b7-03c2638e9a0f",
    "metadata": {},
    "outputs": [
@@ -257,7 +279,7 @@
        "(2.799711384836629, 0.005114831546164752)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
