chore: add evan miller sample size

--- a/002_ab_test.v2.ipynb
+++ b/002_ab_test.v2.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.02, 0.023)"
+       "(0.01, 0.0114)"
       ]
      },
      "execution_count": 2,
@@ -38,7 +38,9 @@
     "ratio = 1\n",
     "\n",
     "p1 = 0.02\n",
-    "p2 = p1 * 1.15\n",
+    "p2 = p1 * 0.15 + p1\n",
+    "p1 = 0.01\n",
+    "p2 = p1 * 0.14 + p1\n",
     "p1, p2"
    ]
   },
@@ -51,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "36693"
+       "84779"
       ]
      },
      "execution_count": 3,
@@ -77,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "(734, 844, 0.02000381544163737, 0.02300166244242771)"
+       "(848, 967, 0.010002477028509418, 0.011406126517179963)"
       ]
      },
      "execution_count": 4,
@@ -102,17 +104,17 @@
      "data": {
       "text/plain": [
        "<class 'statsmodels.stats.base.HolderTuple'>\n",
-       "statistic = -2.7977781958042582\n",
-       "pvalue = 0.005145543433134009\n",
+       "statistic = -2.8068490684958927\n",
+       "pvalue = 0.005002867614953665\n",
        "compare = 'diff'\n",
        "method = 'agresti-caffo'\n",
-       "diff = -0.0029978470007903414\n",
-       "ratio = 0.8696682464454977\n",
-       "odds_ratio = 0.8670078969611125\n",
-       "variance = 1.1480082889411636e-06\n",
+       "diff = -0.0014036494886705449\n",
+       "ratio = 0.8769389865563597\n",
+       "odds_ratio = 0.8756956350009129\n",
+       "variance = 2.500683525084858e-07\n",
        "alternative = 'two-sided'\n",
        "value = 0\n",
-       "tuple = (-2.7977781958042582, 0.005145543433134009)"
+       "tuple = (-2.8068490684958927, 0.005002867614953665)"
       ]
      },
      "execution_count": 5,
@@ -139,7 +141,7 @@
     {
      "data": {
       "text/plain": [
-       "(-2.7993640341603294, 0.0051203375431128784)"
+       "(-2.808313491609461, 0.004980172048271678)"
       ]
      },
      "execution_count": 6,
@@ -164,12 +166,12 @@
      "data": {
       "text/plain": [
        "<class 'statsmodels.tools.testing.Holder'>\n",
-       "power = 0.8000034194420894\n",
-       "p_pooled = 0.0215\n",
-       "std_null = 0.20512313375141283\n",
-       "std_alt = 0.2051121644369246\n",
-       "nobs1 = 36693\n",
-       "nobs2 = 36693.0\n",
+       "power = 0.800001811889412\n",
+       "p_pooled = 0.010700000000000001\n",
+       "std_null = 0.14550264602405003\n",
+       "std_alt = 0.14549927834872584\n",
+       "nobs1 = 84779\n",
+       "nobs2 = 84779.0\n",
        "nobs_ratio = 1.0\n",
        "alpha = 0.05"
       ]
@@ -189,6 +191,44 @@
     "    alternative=\"two-sided\",\n",
     "    return_results=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dc2b124a-f227-48c9-926f-52abb1a0e5cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80919"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def evan_miller_sample_size(p, delta, alpha=0.05, power=0.8):\n",
+    "    if p > 0.5:\n",
+    "        p = 1.0 - p\n",
+    "    z_alpha = st.norm.ppf(1 - alpha / 2)\n",
+    "    z_beta = st.norm.ppf(power)\n",
+    "\n",
+    "    sd1 = np.sqrt(2 * p * (1 - p))\n",
+    "    sd2 = np.sqrt(p * (1 - p) + (p + delta) * (1 - p - delta))\n",
+    "    return math.ceil(\n",
+    "        (\n",
+    "            (z_alpha * sd1 + z_beta * sd2)\n",
+    "            * (z_alpha * sd1 + z_beta * sd2)\n",
+    "            / (delta * delta)\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "evan_miller_sample_size(p1, p2 - p1)"
    ]
   }
  ],
