--- a/002_ab_test.v2.ipynb
+++ b/002_ab_test.v2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4326ed94-3f81-4921-981a-fcd285d635ff",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b33a83fe-7a17-43aa-961e-ea9f2c07d945",
@@ -104,17 +112,17 @@
      "data": {
       "text/plain": [
        "<class 'statsmodels.stats.base.HolderTuple'>\n",
-       "statistic = -2.8068490684958927\n",
-       "pvalue = 0.005002867614953665\n",
+       "statistic = -2.808378805210456\n",
+       "pvalue = 0.004979161993152016\n",
        "compare = 'diff'\n",
-       "method = 'agresti-caffo'\n",
+       "method = 'wald'\n",
        "diff = -0.0014036494886705449\n",
        "ratio = 0.8769389865563597\n",
        "odds_ratio = 0.8756956350009129\n",
-       "variance = 2.500683525084858e-07\n",
+       "variance = 2.498077858533081e-07\n",
        "alternative = 'two-sided'\n",
        "value = 0\n",
-       "tuple = (-2.8068490684958927, 0.005002867614953665)"
+       "tuple = (-2.808378805210456, 0.004979161993152016)"
       ]
      },
      "execution_count": 5,
@@ -128,6 +136,7 @@
     "    nobs1,\n",
     "    count2,\n",
     "    nobs2,\n",
+    "    method=\"wald\",  # Must be 'wald'\n",
     "    return_results=True,\n",
     ")"
    ]
@@ -229,6 +238,273 @@
     "\n",
     "\n",
     "evan_miller_sample_size(p1, p2 - p1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f26f1da-4abd-406d-bcbb-a1a6fbfe9b37",
+   "metadata": {},
+   "source": [
+    "# Comparing Two Independent Population Proportions\n",
+    "\n",
+    "$$\n",
+    "z = \\frac{(p_1 - p_2) - D_o}{\\sqrt{\n",
+    "\\frac{p_1\\cdot(1-p_1)}{n_1} + \\frac{p_2\\cdot(1-p_2)}{n_2}}} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7053997c-893d-4646-a813-25c50c5d1122",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.7702754679970862, 0.03834063134876544, 0.07668126269753088)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha = 0.10\n",
+    "delta = 0.05\n",
+    "\n",
+    "p1 = 0.67\n",
+    "p2 = 0.8\n",
+    "n1 = 500\n",
+    "n2 = 100\n",
+    "value = -0.05\n",
+    "\n",
+    "\n",
+    "s1 = p1 * (1 - p1)\n",
+    "s2 = p2 * (1 - p2)\n",
+    "se = np.sqrt(s1 / n1 + s2 / n2)\n",
+    "z = ((p1 - p2) - value) / se\n",
+    "p = st.norm.sf(np.abs(z))\n",
+    "z, p, p * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3ad850fe-3378-4fba-a0e1-9262abdea7f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'statsmodels.stats.base.HolderTuple'>\n",
+       "statistic = -1.7702754679970862\n",
+       "pvalue = 0.07668126269753088\n",
+       "compare = 'diff'\n",
+       "method = 'wald'\n",
+       "diff = -0.13\n",
+       "ratio = 0.8375\n",
+       "odds_ratio = 0.5075757575757575\n",
+       "variance = 0.0020421999999999997\n",
+       "alternative = 'two-sided'\n",
+       "value = -0.05\n",
+       "tuple = (-1.7702754679970862, 0.07668126269753088)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count1 = math.ceil(p1 * n1)\n",
+    "count2 = math.ceil(p2 * n2)\n",
+    "nobs1 = n1\n",
+    "nobs2 = n2\n",
+    "ratio = nobs2 / nobs1\n",
+    "sm.test_proportions_2indep(\n",
+    "    count1,\n",
+    "    nobs1,\n",
+    "    count2,\n",
+    "    nobs2,\n",
+    "    return_results=True,\n",
+    "    value=value,\n",
+    "    method=\"wald\",\n",
+    "    alternative=\"two-sided\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5b6855b2-5364-4962-9515-59588d5cd497",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.5813962397448424, 0.11378746671001491)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sm.proportions_ztest(\n",
+    "    count=[count1, count2],\n",
+    "    nobs=[nobs1, nobs2],\n",
+    "    alternative=\"two-sided\",\n",
+    "    prop_var=False,\n",
+    "    value=value,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e0827ae-1ea6-46fb-8d97-9fe13a66fee3",
+   "metadata": {},
+   "source": [
+    "# Sample size calculation for comparing proportions\n",
+    "\n",
+    "\n",
+    "$n = (Z_\\text{α/2}+Z_β)^2 * (p_1(1-p_1)+p_2(1-p_2)) / (p_1-p_2)^2$[^1]\n",
+    "\n",
+    "\n",
+    "[^1]: https://select-statistics.co.uk/calculators/sample-size-calculator-two-proportions/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c8d548f9-cd74-4ab3-9d79-78a6c76a3445",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "290.4085501709164"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1 = 0.2\n",
+    "p2 = 0.3\n",
+    "\n",
+    "ratio = 1\n",
+    "alpha = 0.05\n",
+    "\n",
+    "s1 = p1 * (1 - p1)\n",
+    "s2 = p2 * (1 - p2)\n",
+    "\n",
+    "z = st.norm.ppf(1 - alpha / 2) + st.norm.ppf(power)\n",
+    "n = (z**2 * (s1 + s2)) / (p1 - p2) ** 2\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "62ab9f0b-5254-4cba-88b2-9b2b2857bbdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-2.804436639481245, 0.0025202296674208865, 0.005040459334841773)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n1 = n2 = math.ceil(n)\n",
+    "value = 0\n",
+    "s1 = p1 * (1 - p1)\n",
+    "s2 = p2 * (1 - p2)\n",
+    "se = np.sqrt(s1 / n1 + s2 / n2)\n",
+    "z = ((p1 - p2) - value) / se\n",
+    "p = st.norm.sf(np.abs(z))\n",
+    "z, p, p * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8dde73b3-0c12-4e51-8d6c-4a1f8b884ae8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "294"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is more accurate than the one above\n",
+    "# Stick to statsmodels for both the calculation.\n",
+    "nobs1 = math.ceil(\n",
+    "    sm.samplesize_proportions_2indep_onetail(\n",
+    "        p1 - p2, p2, power=power, alpha=alpha, alternative=\"two-sided\", ratio=ratio\n",
+    "    )\n",
+    ")\n",
+    "nobs1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fa155c6f-9846-4b2e-8ee0-021ecf096014",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'statsmodels.stats.base.HolderTuple'>\n",
+       "statistic = -2.87061379221714\n",
+       "pvalue = 0.0040967571509745926\n",
+       "compare = 'diff'\n",
+       "method = 'wald'\n",
+       "diff = -0.10204081632653061\n",
+       "ratio = 0.6629213483146067\n",
+       "odds_ratio = 0.5782930910829548\n",
+       "variance = 0.0012635671141055802\n",
+       "alternative = 'two-sided'\n",
+       "value = 0\n",
+       "tuple = (-2.87061379221714, 0.0040967571509745926)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nobs2 = nobs1\n",
+    "count1 = math.ceil(p1 * nobs1)\n",
+    "count2 = math.ceil(p2 * nobs2)\n",
+    "sm.test_proportions_2indep(\n",
+    "    count1,\n",
+    "    nobs1,\n",
+    "    count2,\n",
+    "    nobs2,\n",
+    "    return_results=True,\n",
+    "    value=0,\n",
+    "    method=\"wald\",\n",
+    "    alternative=\"two-sided\",\n",
+    ")"
    ]
   }
  ],
