chore: add notes on different methods

--- a/002_ab_test.v2.ipynb
+++ b/002_ab_test.v2.ipynb
@@ -506,6 +506,37 @@
     "    alternative=\"two-sided\",\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e329309-d186-4950-b293-5f44685f063c",
+   "metadata": {},
+   "source": [
+    "## Difference between method `wald` and `agresti-caffo`:\n",
+    "\n",
+    "https://www.itl.nist.gov/div898/software/dataplot/refman1/auxillar/diffprop.htm\n",
+    "\n",
+    "\n",
+    "For `wald` (aka _normal approximation_):\n",
+    "\n",
+    "$$\n",
+    "(\\hat{p}_1 - \\hat{p}_2) \\pm z_{\\alpha/2}\n",
+    "                 \\sqrt{\\frac{\\hat{p}_1 (1 - \\hat{p}_1)}{n_1} +\n",
+    "                 \\frac{\\hat{p}_2 (1 - \\hat{p}_2)}{n_2}}\n",
+    "$$\n",
+    "\n",
+    "For `agresti-caffo` (aka _adjusted wald_):\n",
+    "\n",
+    "$$\n",
+    "(\\tilde{p}_1 - \\tilde{p}_2) \\pm z_{\\alpha/2}\n",
+    "                 \\sqrt{\\frac{\\tilde{p}_1 (1 - \\tilde{p}_1)}{n_1+2} +\n",
+    "                 \\frac{\\tilde{p}_2 (1 - \\tilde{p}_2)}{n_2+2}}\n",
+    "$$\n",
+    "\n",
+    "`wald` method is commonly used. However, Agresti and Caffo pointed out that this method does not always perform well in the sense that the actual coverage probabilities can be less than (and often substantially less than) the nominal coverage probabilities.\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
