chore: update calculation

--- a/002_ab_test.v2.ipynb
+++ b/002_ab_test.v2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "b33a83fe-7a17-43aa-961e-ea9f2c07d945",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "927eb26e-3f54-4390-855b-96e5f3b31e6d",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "(0.01, 0.0114)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "82cfa30f-9785-48bf-aa02-3a8093557fc6",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "84779"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "90201597-ecd2-49db-81ad-622b763195c5",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "(848, 967, 0.010002477028509418, 0.011406126517179963)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "20dfb649-561a-49de-9494-33f4a8042a64",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "tuple = (-2.808378805210456, 0.004979161993152016)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "30cedb4f-3b4b-4137-b9b6-d426d48d9be3",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "(-2.808313491609461, 0.004980172048271678)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "17ef7cf6-0f90-432c-b9ed-0baf305e05ce",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "alpha = 0.05"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "dc2b124a-f227-48c9-926f-52abb1a0e5cc",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "80919"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "7053997c-893d-4646-a813-25c50c5d1122",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "(-1.7702754679970862, 0.03834063134876544, 0.07668126269753088)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "3ad850fe-3378-4fba-a0e1-9262abdea7f3",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "tuple = (-1.7702754679970862, 0.07668126269753088)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "5b6855b2-5364-4962-9515-59588d5cd497",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "(-1.5813962397448424, 0.11378746671001491)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "c8d548f9-cd74-4ab3-9d79-78a6c76a3445",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "290.4085501709164"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "62ab9f0b-5254-4cba-88b2-9b2b2857bbdc",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
        "(-2.804436639481245, 0.0025202296674208865, 0.005040459334841773)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "8dde73b3-0c12-4e51-8d6c-4a1f8b884ae8",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
        "294"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "fa155c6f-9846-4b2e-8ee0-021ecf096014",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "tuple = (-2.87061379221714, 0.0040967571509745926)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,6 +505,74 @@
     "    method=\"wald\",\n",
     "    alternative=\"two-sided\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "535a74b6-4156-4b0b-a8d7-631c311cb6fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-1.689668300098093, pvalue=0.04554668967595191)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Matches result from abtestguide\n",
+    "import numpy as np\n",
+    "from scipy.stats import ttest_ind_from_stats\n",
+    "\n",
+    "nobs1, count1 = 80000, 1600\n",
+    "nobs2, count2 = 80000, 1696\n",
+    "mean1 = count1 / nobs1\n",
+    "std1 = np.sqrt(mean1 * (1 - mean1))  # variance = p * (1 - p)\n",
+    "mean2 = count2 / nobs2\n",
+    "std2 = np.sqrt(mean2 * (1 - mean2))\n",
+    "\n",
+    "ttest_ind_from_stats(\n",
+    "    mean1=mean1,\n",
+    "    std1=std1,\n",
+    "    nobs1=nobs1,\n",
+    "    mean2=mean2,\n",
+    "    std2=std2,\n",
+    "    nobs2=nobs2,\n",
+    "    alternative=\"less\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d73a6585-d463-43b5-ada3-3533d58d1c4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36690.02436708896"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean1 = 0.02\n",
+    "mean2 = mean1 * 15 / 100 + mean1\n",
+    "var1 = mean1 * (1 - mean1)\n",
+    "var2 = mean2 * (1 - mean2)\n",
+    "\n",
+    "z = st.norm.ppf(1 - alpha / 2) + st.norm.ppf(power)\n",
+    "n = (z**2 * (var1 + var2)) / (mean1 - mean2) ** 2\n",
+    "n"
    ]
   },
   {
